--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -41,8 +41,10 @@ bCompressed=False
 bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
+-MapsToCook=(FilePath="/Game/RollingBP/Maps/Menu_Map")
 -MapsToCook=(FilePath="")
-+MapsToCook=(FilePath="/Game/RollingBP/Maps/RollingBPExampleMap")
++MapsToCook=(FilePath="/Game/RollingBP/Maps/Menu_Map")
++MapsToCook=(FilePath="/Game/RollingBP/Maps/Level_001")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
