--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,19 +1,6 @@
 [URL]
 GameName=MyProject2
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/RollingBP/Maps/RollingBPExampleMap
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/RollingBP/Maps/RollingBPExampleMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/RollingBP/Blueprints/RollingGameMode.RollingGameMode_C
-GlobalDefaultServerGameMode=None
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
 MaxShaderLanguageVersion=2
@@ -22,14 +9,99 @@ MaxShaderLanguageVersion=2
 +ActiveGameNameRedirects=(OldGameName="TP_RollingBP",NewGameName="/Script/MyProject2")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_RollingBP",NewGameName="/Script/MyProject2")
 
+[/Script/Engine.RendererSettings]
+r.MobileHDR=False
+r.Mobile.DisableVertexFog=False
+r.Shadow.CSM.MaxMobileCascades=2
+r.MobileMSAA=1
+r.DiscardUnusedQuality=False
+r.AllowOcclusionQueries=True
+r.MinScreenRadiusForLights=0.030000
+r.MinScreenRadiusForDepthPrepass=0.030000
+r.MinScreenRadiusForCSMDepth=0.010000
+r.PrecomputedVisibilityWarning=False
+r.TextureStreaming=True
+Compat.UseDXT5NormalMaps=False
+r.ClearCoatNormal=False
+r.ReflectionCaptureResolution=128
+r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
+r.ForwardShading=False
+r.VertexFoggingForOpaque=True
+r.AllowStaticLighting=True
+r.NormalMapsForStaticLighting=False
+r.GenerateMeshDistanceFields=False
+r.DistanceFieldBuild.EightBit=False
+r.GenerateLandscapeGIData=True
+r.DistanceFieldBuild.Compress=False
+r.TessellationAdaptivePixelsPerTriangle=48.000000
+r.SeparateTranslucency=False
+r.TranslucentSortPolicy=0
+TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
+r.CustomDepth=1
+r.CustomDepthTemporalAAJitter=True
+r.PostProcessing.PropagateAlpha=False
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.LensFlare=False
+r.DefaultFeature.AntiAliasing=0
+r.StencilForLODDither=False
+r.EarlyZPass=3
+r.EarlyZPassMovable=True
+r.EarlyZPassOnlyMaterialMasking=False
+r.DBuffer=True
+r.ClearSceneMethod=1
+r.BasePassOutputsVelocity=False
+r.SelectiveBasePassOutputs=False
+bDefaultParticleCutouts=False
+r.AllowGlobalClipPlane=False
+r.GBufferFormat=1
+r.MorphTarget.Mode=True
+r.GPUCrashDebugging=False
+vr.InstancedStereo=False
+vr.MultiView=False
+vr.MobileMultiView=False
+vr.MobileMultiView.Direct=False
+vr.MonoscopicFarField=False
+r.WireframeCullThreshold=5.000000
+r.SupportStationarySkylight=True
+r.SupportLowQualityLightmaps=True
+r.SupportPointLightWholeSceneShadows=True
+r.SupportAtmosphericFog=True
+r.SkinCache.CompileShaders=False
+r.Mobile.EnableStaticAndCSMShadowReceivers=True
+r.Mobile.AllowDistanceFieldShadows=True
+r.Mobile.AllowMovableDirectionalLights=True
+r.MobileNumDynamicPointLights=4
+r.MobileDynamicPointLightsUseStaticBranch=True
+r.SkinCache.SceneMemoryLimitInMB=128.000000
+r.GPUSkin.Limit2BoneInfluences=False
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/RollingBP/Maps/Menu_Map.Menu_Map
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/RollingBP/Maps/Menu_Map.Menu_Map
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/RollingBP/Blueprints/RollingGameMode.RollingGameMode_C
+GlobalDefaultServerGameMode=None
+
+[/Script/Slate.SlateSettings]
+bExplicitCanvasChildZOrder=True
+
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-[/Script/Engine.RendererSettings]
-r.AllowStaticLighting=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -71,5 +143,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
