--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ MaxShaderLanguageVersion=2
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_RollingBP",NewGameName="/Script/MyProject2")
 
 [/Script/Engine.RendererSettings]
-r.MobileHDR=False
+r.MobileHDR=True
 r.Mobile.DisableVertexFog=False
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
@@ -143,4 +143,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
